--- a/themes/even/templates/index.html
+++ b/themes/even/templates/index.html
@@ -46,7 +46,7 @@
 
             <div id="mobile-navbar" class="mobile-navbar">
               <div class="mobile-header-logo">
-                <a href="/" class="logo">{{ config.extra.even_title }}</a>
+                <a href="/" class="logo"><a href="{{ config.base_url }}"><img src="{{ config.extra.even_title }}" height="48px" width="48px"></img></a></a>
               </div>
               <div class="mobile-navbar-icon icon-out">
                 <span></span>
@@ -68,7 +68,7 @@
             </nav>
 
             <header id="header">
-                <div class="logo"><a href="{{ config.base_url }}">{{ config.extra.even_title }}</a></div>
+                <div class="logo"><a href="{{ config.base_url }}"><img src="{{ config.extra.even_title }}"></img></a></div>
                 <nav class="menu">
                     <ul>
                         {% for item in config.extra.even_menu %}
