Finish adding stuff

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,7 +7,8 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title></title>
+      <title>KAUG Radio &amp; Concert Promotion</title>
+      <link rel="icon" href="/res/icon.svg">
 
       
 
@@ -41,7 +42,7 @@
 
             <div id="mobile-navbar" class="mobile-navbar">
               <div class="mobile-header-logo">
-                <a href="/" class="logo">Kaug Radio</a>
+                <a href="/" class="logo"><a href="http:&#x2F;&#x2F;127.0.0.1:1111"><img src="&#x2F;res&#x2F;icon.svg" height="50px" width="50px"></img></a></a>
               </div>
               <div class="mobile-navbar-icon icon-out">
                 <span></span>
@@ -87,7 +88,7 @@
             </nav>
 
             <header id="header">
-                <div class="logo"><a href="http:&#x2F;&#x2F;127.0.0.1:1111">Kaug Radio</a></div>
+                <div class="logo"><a href="http:&#x2F;&#x2F;127.0.0.1:1111"><img src="&#x2F;res&#x2F;icon.svg"></img></a></div>
                 <nav class="menu">
                     <ul>
                         
@@ -148,4 +149,3 @@
     <script src="/livereload.js?port=1024&mindelay=10"></script></body>
 
 </html>
-
