--- a/themes/even/sass/site.scss
+++ b/themes/even/sass/site.scss
@@ -1,7 +1,7 @@
 @import "normalize";
 
 $theme-color-map: (
-  'Default': #c05b4d #f8f5ec,
+  'Default': #00F #603,
   'Mint Green': #16982B #f5f5f5,
   'Cobalt Blue': #0047AB #f0f2f5,
   'Hot Pink': #FF69B4 #f8f5f5,
@@ -9,8 +9,8 @@ $theme-color-map: (
 );
 
 // TODO: allow to change that
-$main-colour: #c05b4d;
-$secondary-colour: #f8f5ec;
+$main-colour: #C06;
+$secondary-colour: #e8e8e8;
 $body-width: 800px;
 $mobile-navbar-height: 50px !default;
 $code-colour: #c7254e;
