Tried fixing some pages.

--- a/templates/404.html
+++ b/templates/404.html
@@ -27,7 +27,7 @@
       
 
       
-          <link rel="stylesheet" href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;site.css">
+          <link rel="stylesheet" href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;site.css">
           
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css" integrity="sha384-9eLZqc9ds8eNjO3TmqPeYcDj8n+Qfa4nuSiGYa6DjLNcv9BtN69ZIulL9+8CqC9Y" crossorigin="anonymous">
           
@@ -42,7 +42,7 @@
 
             <div id="mobile-navbar" class="mobile-navbar">
               <div class="mobile-header-logo">
-                <a href="/" class="logo"><a href="http:&#x2F;&#x2F;127.0.0.1:1111"><img src="&#x2F;res&#x2F;icon.svg" height="50px" width="50px"></img></a></a>
+                <a href="/" class="logo"><a href="https:&#x2F;&#x2F;kaug-radio.web.app"><img src="&#x2F;res&#x2F;icon.svg" height="50px" width="50px"></img></a></a>
               </div>
               <div class="mobile-navbar-icon icon-out">
                 <span></span>
@@ -55,31 +55,31 @@
               <ul class="mobile-menu-list">
                 
                     <li class="mobile-menu-item">
-                        <a href="http:&#x2F;&#x2F;127.0.0.1:1111">
+                        <a href="https:&#x2F;&#x2F;kaug-radio.web.app">
                             Home
                         </a>
                     </li>
                 
                     <li class="mobile-menu-item">
-                        <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;events">
+                        <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;events">
                             Events
                         </a>
                     </li>
                 
                     <li class="mobile-menu-item">
-                        <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;shows">
+                        <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;shows">
                             Shows
                         </a>
                     </li>
                 
                     <li class="mobile-menu-item">
-                        <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;artists">
+                        <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;artists">
                             Artists
                         </a>
                     </li>
                 
                     <li class="mobile-menu-item">
-                        <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;about">
+                        <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;about">
                             About
                         </a>
                     </li>
@@ -88,36 +88,36 @@
             </nav>
 
             <header id="header">
-                <div class="logo"><a href="http:&#x2F;&#x2F;127.0.0.1:1111"><img src="&#x2F;res&#x2F;icon.svg"></img></a></div>
+                <div class="logo"><a href="https:&#x2F;&#x2F;kaug-radio.web.app"><img src="&#x2F;res&#x2F;icon.svg"></img></a></div>
                 <nav class="menu">
                     <ul>
                         
                             <li>
-                                <a href="http:&#x2F;&#x2F;127.0.0.1:1111">
+                                <a href="https:&#x2F;&#x2F;kaug-radio.web.app">
                                     Home
                                 </a>
                             </li>
                         
                             <li>
-                                <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;events">
+                                <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;events">
                                     Events
                                 </a>
                             </li>
                         
                             <li>
-                                <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;shows">
+                                <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;shows">
                                     Shows
                                 </a>
                             </li>
                         
                             <li>
-                                <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;artists">
+                                <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;artists">
                                     Artists
                                 </a>
                             </li>
                         
                             <li>
-                                <a href="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;about">
+                                <a href="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;about">
                                     About
                                 </a>
                             </li>
@@ -144,8 +144,8 @@
         </div>
 
       
-          <script type="text/javascript" src="http:&#x2F;&#x2F;127.0.0.1:1111&#x2F;even.js" ></script>
+          <script type="text/javascript" src="https:&#x2F;&#x2F;kaug-radio.web.app&#x2F;even.js" ></script>
       
-    <script src="/livereload.js?port=1024&mindelay=10"></script></body>
+    </body>
 
 </html>
